--- a/public/pages/game.html
+++ b/public/pages/game.html
@@ -16,22 +16,28 @@
         <ul class="players"></ul>
         <div class="questionContainer">
           <p class="question"></p>
-          <div class="answers">
+          <ul class="answers">
 
-          </div>
+          </ul>
         </div>
       </div>
   </main>
   <script src="/socket.io/socket.io.js"></script>
   <script>
     function updatePlayers() {
-      players.forEach(player => {
-        
+      console.log(players)
+      console.log(players.sort((playerA,playerB) => playerA.hp - playerA.hp))
+      players.sort((playerA,playerB) => playerA.hp - playerB.hp).reverse().forEach((player, index) => {
+        console.log(index, player.playername)
+        document.body.style.setProperty(`--hp-${player.id}`, player.hp + '%');
+        document.body.style.setProperty(`--rank-${player.id}`, index);
       });
     }
     let players;
     let playersContainer = document.querySelector('.players')
     var socket = io();
+    let questionEl = document.querySelector('p.question')
+    let answersEl = document.querySelector('.answers')
 
     socket.on('connect', () => {
       console.log('open')
@@ -67,8 +73,33 @@
         li.style.width = `var(--hp-${player.id})`
         playersContainer.appendChild(li)
       })
-      
+
     });
+
+    socket.on('question', (msg) => {
+      console.log('question')
+      console.log(msg)
+      questionEl.textContent = msg.question
+      while(answersEl.firstElementChild) answersEl.firstElementChild.remove()
+      msg.answers.forEach(answer => {
+        let li = document.createElement('li')
+        li.textContent = answer
+        li.classList = 'answer'
+        li.addEventListener('click', () => {
+          socket.emit('answer', {
+            playerId: sessionStorage.getItem('playerId'),
+            answer: answer
+          })
+        })
+        answersEl.appendChild(li)
+      })
+    })
+
+    socket.on('update players', (msg) => {
+      console.log('update players', msg)
+      players = msg.players
+      updatePlayers()
+    })
   </script>
 </body>
 </html>
