--- a/public/index.html
+++ b/public/index.html
@@ -5,11 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="/css/style.css">
   </head>
   <body>
     <main>
-      <input type="text" name="playername" id="playername">
-      <button>Go</button>
+      <div class="inputbox">
+        <input type="text" name="playername" id="playername">
+        <button>Go</button>
+      </div>
     </main>
     <script>
       sessionStorage.clear();
