--- a/public/pages/game.html
+++ b/public/pages/game.html
@@ -27,6 +27,12 @@
           </div>
         </div>
         <ul class="players"></ul>
+        <div>
+          <div id="messages"></div>
+          <form id="form">
+            <input id="input"/><button>Send</button>
+          </form>
+        </div>
       </div>
   </main>
   <script src="/socket.io/socket.io.js"></script>
@@ -124,6 +130,24 @@
       players = msg.players
       updatePlayers()
     })
+
+    var messages = document.getElementById('messages');
+    var form = document.getElementById('form');
+    var input = document.getElementById('input');
+
+    form.addEventListener('submit', function(e) {
+      e.preventDefault();
+      if (input.value) {
+        socket.emit('chat', input.value);
+        input.value = '';
+      }
+    });
+
+    socket.on('chat', function(msg) {
+      var item = document.createElement('li');
+      item.textContent = msg;
+      messages.appendChild(item);
+    });
   </script>
 </body>
 </html>
