--- a/public/index.html
+++ b/public/index.html
@@ -11,12 +11,40 @@
     <main>
       <div class="inputbox">
         <input type="text" name="playername" id="playername">
-        <button>Go</button>
+        <button id="btgo">Go</button>
+      </div>
+      <div class="inputbox">
+        <button id="btquestioncommu">Contribuer</button>
+      </div>
+      <div class="dpnone divquestioncommu">
+        <div class="divquestioncommu">
+          <label for="">Proposer nous une question a ajouter</label>
+          <input type="text" name="questionCommu" id="questionCommu">
+        </div>
+        <div class="divquestioncommu">
+          <div class="divquestioncommu">
+            <label for="">Ici la bonne réponse</label>
+            <input type="text" name="questionCommuGood" id="questionCommuGood">
+          </div>
+          <div class="divquestioncommu">
+            <div>
+              <label for="">Ici les mauvaises réponses</label>
+            </div>
+            <div>
+              <input type="text" name="questionCommuBad1" id="questionCommuBad1">
+              <input type="text" name="questionCommuBad2" id="questionCommuBad2">
+              <input type="text" name="questionCommuBad3" id="questionCommuBad3">
+            </div>
+          </div>
+          <div class="inputbox">
+            <button id="envoyer">Envoyer</button>
+          </div>
+        </div>
       </div>
     </main>
     <script>
       sessionStorage.clear();
-      document.querySelector('button').addEventListener('click', (e) => {
+      document.querySelector('#btgo').addEventListener('click', (e) => {
         fetch(location.origin + '/player', {
           method: 'POST',
           headers: {
@@ -31,6 +59,32 @@
           location.href = location.origin + '/game'
         }
       )})
+
+      document.querySelector('#btquestioncommu').addEventListener('click', () => {
+        let divquestioncommu = document.querySelector('.divquestioncommu')
+        divquestioncommu.classList.toggle('dpnone')
+      })
+
+      document.querySelector('#envoyer').addEventListener('click', () => {
+        fetch(location.origin + '/questioncommu', {
+          method: 'POST',
+          headers: {
+            "Content-Type": "application/json"
+          },
+          body: JSON.stringify({
+            questionCommu: document.querySelector('#questionCommu').value,
+            questionCommuGood: document.querySelector('#questionCommuGood').value,
+            questionCommuBad1: document.querySelector('#questionCommuBad1').value,
+            questionCommuBad2: document.querySelector('#questionCommuBad2').value,
+            questionCommuBad3: document.querySelector('#questionCommuBad3').value,
+          })
+        }).then(resp => resp.json()).then(resp => {
+          if(!resp.success) return
+          else{
+            alert("Question ajouté")
+          }
+        })
+      })
     </script>
   </body>
 </html>
