--- a/public/pages/login.html
+++ b/public/pages/login.html
@@ -7,10 +7,32 @@
     <title>Login</title>
 </head>
 <body>
-    <form action="#" method="POST">
-        <input type="email" name="mail" placeholder="E-mail">
-        <input type="password" name="password" placeholder="Mot de passe">
-        <input type="submit" value="Connexion">
-    </form>
+        <input type="email" name="mail" id='mail' placeholder="E-mail">
+        <input type="password" name="password" id="password" placeholder="Mot de passe">
+        <button id="sub">Connexion</button>
+        <p id="error"></p>
 </body>
 </html>
+
+<script>
+    document.querySelector('#sub').addEventListener('click', ()=>{
+    fetch('http://localhost:3000/login',{
+        method: "POST",
+        body: JSON.stringify({   
+            'mail': document.querySelector('#mail').value.toString(),
+            'password':document.querySelector('#password').value.toString(),
+        }),
+        headers: {
+            "Content-Type": "application/json"
+        },
+        
+    }).then(resp=>resp.json()).then(resp=>{
+        console.log(resp)
+        if(resp.length < 60){
+            document.querySelector('#error').innerHTML=resp
+        }else{
+            localStorage.setItem('jwtToken', resp)
+        }
+    })
+})
+</script>
